# easy-email

./: config.py  pyproject.toml
content/: general.html
easy_email/: __init__.py  email_service.py  mernstack.py  simple_email.py
